deploy/kustomize/base/service-serve.yaml
apiVersion: v1
kind: Service
metadata:
  name: uav-gnn-serve
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: inference
